@@ -69,11 +69,7 @@ final class StringConstructorExtractor
     public Object extract(MultivaluedMap<String, String> parameters) {
         String v = parameters.getFirst(parameter);
         if (v != null) {
-            try {
-                return getValue(v);
-            } catch (Exception e) {
-                throw new ContainerException(e);
-            }
+            return getValue(v);
         } else if (defaultValue != null) {
             // TODO do we need to clone the default value
             return defaultValue;
